--- a/src/lib/dialogs/convert/convert-file.dialog.html
+++ b/src/lib/dialogs/convert/convert-file.dialog.html
@@ -1,15 +1,22 @@
-<h1 matDialogTitle>{{ 'ONLYOFFICE_ALFRESCO_EXTENSION.PAGES.CONVERT.TITLE' | translate : {name: data.name} }}</h1>
-<div mat-dialog-content class="adf-dialog-content">
-  <mat-progress-bar value="{{ percentageDone }}" color="primary" mode="determinate" />
-  <div class="adf-dialog-content-progress-text">
-    <span class="adf-dialog-content-progress-text-percentage">
-      {{ percentageDone }}%
-    </span>
-      {{ 'ONLYOFFICE_ALFRESCO_EXTENSION.PAGES.CONVERT.COMPLETE' | translate }}
-  </div>
+<div class="onlyoffice-alfresco-extension-dialog">
+  <h1 mat-dialog-title>{{ 'ONLYOFFICE_ALFRESCO_EXTENSION.PAGES.CONVERT.TITLE' | translate : {name: data.name} }}</h1>
+  
+  <mat-dialog-content class="onlyoffice-alfresco-extension-dialog-content">
+    <mat-progress-bar value="{{ percentageDone }}" mode="determinate" />
+    <div>
+      <span>
+        {{ percentageDone }}%
+      </span>
+        {{ 'ONLYOFFICE_ALFRESCO_EXTENSION.PAGES.CONVERT.COMPLETE' | translate }}
+    </div>
+  </mat-dialog-content>
+  
+  <mat-dialog-actions class="onlyoffice-alfresco-extension-dialog-footer">
+    <button
+      mat-button
+      [disabled]="true"
+    >
+      {{ 'ONLYOFFICE_ALFRESCO_EXTENSION.BUTTONS.CANCEL' | translate }}
+    </button>
+  </mat-dialog-actions>
 </div>
-<mat-dialog-actions align="end">
-  <button class="adf-convert-file-dialog-button" mat-button color="primary" id="cancel-button" [disabled]="true">
-    {{ 'ONLYOFFICE_ALFRESCO_EXTENSION.BUTTONS.CANCEL' | translate }}
-  </button>
-</mat-dialog-actions>
