fix: added missing translations to save-as.dialog.html

--- a/src/lib/dialogs/save-as/save-as.dialog.html
+++ b/src/lib/dialogs/save-as/save-as.dialog.html
@@ -18,7 +18,7 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <mat-label>{{ 'NODE_FROM_TEMPLATE.FORM.PLACEHOLDER.NAME' | translate }}</mat-label>
+        <mat-label>{{ 'ONLYOFFICE_ALFRESCO_EXTENSION.PAGES.SAVE_AS.FIELDS.DESTINATION_FOLDER.TITLE' | translate }}</mat-label>
         <input
           matInput
           formControlName="destinationFolderId"
